--- a/app/src/main/res/layout/activity_collapinglayout_two_nest.xml
+++ b/app/src/main/res/layout/activity_collapinglayout_two_nest.xml
@@ -10,13 +10,14 @@
     <com.ytjojo.viewlib.nestedscrolllayout.view.DefultRefreshView
         android:id="@+id/refreshHeader"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="64dp"
         android:layout_gravity="top"
         android:elevation="2dp"
         android:fitsSystemWindows="false"
         app:waveColor="#60FF4081"
         app:anchor="@+id/collapsingLayout"
         app:anchorGravity="right|bottom"
+        app:isShowWave="true"
         app:behavior="com.ytjojo.viewlib.nestedscrolllayout.RefreshHeaderBehavior"/>
 
     <com.ytjojo.viewlib.nestedscrolllayout.CollapsingLayout
